pycql/parser.out
Created by PLY version 3.11 (https://www.dabeaz.com/ply)

Unused terminals:

    feet
    kilometers
    meters
    nautical miles
    statute miles

Grammar

Rule 0     S' -> condition_or_empty
Rule 1     condition_or_empty -> condition
Rule 2     condition_or_empty -> empty
Rule 3     condition -> predicate
Rule 4     condition -> condition AND condition
Rule 5     condition -> condition OR condition
Rule 6     condition -> NOT condition
Rule 7     condition -> LPAREN condition RPAREN
Rule 8     condition -> LBRACKET condition RBRACKET
Rule 9     predicate -> expression EQ expression
Rule 10    predicate -> expression NE expression
Rule 11    predicate -> expression LT expression
Rule 12    predicate -> expression LE expression
Rule 13    predicate -> expression GT expression
Rule 14    predicate -> expression GE expression
Rule 15    predicate -> expression NOT BETWEEN expression AND expression
Rule 16    predicate -> expression BETWEEN expression AND expression
Rule 17    predicate -> expression NOT LIKE QUOTED
Rule 18    predicate -> expression LIKE QUOTED
Rule 19    predicate -> expression NOT ILIKE QUOTED
Rule 20    predicate -> expression ILIKE QUOTED
Rule 21    predicate -> expression NOT IN LPAREN expression_list RPAREN
Rule 22    predicate -> expression IN LPAREN expression_list RPAREN
Rule 23    predicate -> expression IS NOT NULL
Rule 24    predicate -> expression IS NULL
Rule 25    predicate -> temporal_predicate
Rule 26    predicate -> spatial_predicate
Rule 27    temporal_predicate -> expression BEFORE TIME
Rule 28    temporal_predicate -> expression BEFORE OR DURING time_period
Rule 29    temporal_predicate -> expression DURING time_period
Rule 30    temporal_predicate -> expression DURING OR AFTER time_period
Rule 31    temporal_predicate -> expression AFTER TIME
Rule 32    time_period -> TIME DIVIDE TIME
Rule 33    time_period -> TIME DIVIDE DURATION
Rule 34    time_period -> DURATION DIVIDE TIME
Rule 35    spatial_predicate -> INTERSECTS LPAREN expression COMMA expression RPAREN
Rule 36    spatial_predicate -> DISJOINT LPAREN expression COMMA expression RPAREN
Rule 37    spatial_predicate -> CONTAINS LPAREN expression COMMA expression RPAREN
Rule 38    spatial_predicate -> WITHIN LPAREN expression COMMA expression RPAREN
Rule 39    spatial_predicate -> TOUCHES LPAREN expression COMMA expression RPAREN
Rule 40    spatial_predicate -> CROSSES LPAREN expression COMMA expression RPAREN
Rule 41    spatial_predicate -> OVERLAPS LPAREN expression COMMA expression RPAREN
Rule 42    spatial_predicate -> EQUALS LPAREN expression COMMA expression RPAREN
Rule 43    spatial_predicate -> RELATE LPAREN expression COMMA expression COMMA QUOTED RPAREN
Rule 44    spatial_predicate -> DWITHIN LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
Rule 45    spatial_predicate -> BEYOND LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
Rule 46    spatial_predicate -> BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number RPAREN
Rule 47    spatial_predicate -> BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN
Rule 48    expression_list -> expression_list COMMA expression
Rule 49    expression_list -> expression
Rule 50    expression -> expression PLUS expression
Rule 51    expression -> expression MINUS expression
Rule 52    expression -> expression TIMES expression
Rule 53    expression -> expression DIVIDE expression
Rule 54    expression -> LPAREN expression RPAREN
Rule 55    expression -> LBRACKET expression RBRACKET
Rule 56    expression -> GEOMETRY
Rule 57    expression -> ENVELOPE
Rule 58    expression -> attribute
Rule 59    expression -> QUOTED
Rule 60    expression -> INTEGER
Rule 61    expression -> FLOAT
Rule 62    number -> INTEGER
Rule 63    number -> FLOAT
Rule 64    attribute -> ATTRIBUTE
Rule 65    empty -> <empty>

Terminals, with rules where they appear

AFTER                : 30 31
AND                  : 4 15 16
ATTRIBUTE            : 64
BBOX                 : 46 47
BEFORE               : 27 28
BETWEEN              : 15 16
BEYOND               : 45
COMMA                : 35 36 37 38 39 40 41 42 43 43 44 44 44 45 45 45 46 46 46 46 47 47 47 47 47 48
CONTAINS             : 37
CROSSES              : 40
DISJOINT             : 36
DIVIDE               : 32 33 34 53
DURATION             : 33 34
DURING               : 28 29 30
DWITHIN              : 44
ENVELOPE             : 57
EQ                   : 9
EQUALS               : 42
FLOAT                : 61 63
GE                   : 14
GEOMETRY             : 56
GT                   : 13
ILIKE                : 19 20
IN                   : 21 22
INTEGER              : 60 62
INTERSECTS           : 35
IS                   : 23 24
LBRACKET             : 8 55
LE                   : 12
LIKE                 : 17 18
LPAREN               : 7 21 22 35 36 37 38 39 40 41 42 43 44 45 46 47 54
LT                   : 11
MINUS                : 51
NE                   : 10
NOT                  : 6 15 17 19 21 23
NULL                 : 23 24
OR                   : 5 28 30
OVERLAPS             : 41
PLUS                 : 50
QUOTED               : 17 18 19 20 43 47 59
RBRACKET             : 8 55
RELATE               : 43
RPAREN               : 7 21 22 35 36 37 38 39 40 41 42 43 44 45 46 47 54
TIME                 : 27 31 32 32 33 34
TIMES                : 52
TOUCHES              : 39
UNITS                : 44 45
WITHIN               : 38
error                : 
feet                 : 
kilometers           : 
meters               : 
nautical miles       : 
statute miles        : 

Nonterminals, with rules where they appear

attribute            : 58
condition            : 1 4 4 5 5 6 7 8
condition_or_empty   : 0
empty                : 2
expression           : 9 9 10 10 11 11 12 12 13 13 14 14 15 15 15 16 16 16 17 18 19 20 21 22 23 24 27 28 29 30 31 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 48 49 50 50 51 51 52 52 53 53 54 55
expression_list      : 21 22 48
number               : 44 45 46 46 46 46 47 47 47 47
predicate            : 3
spatial_predicate    : 26
temporal_predicate   : 25
time_period          : 28 29 30

Parsing method: LALR

state 0

    (0) S' -> . condition_or_empty
    (1) condition_or_empty -> . condition
    (2) condition_or_empty -> . empty
    (3) condition -> . predicate
    (4) condition -> . condition AND condition
    (5) condition -> . condition OR condition
    (6) condition -> . NOT condition
    (7) condition -> . LPAREN condition RPAREN
    (8) condition -> . LBRACKET condition RBRACKET
    (65) empty -> .
    (9) predicate -> . expression EQ expression
    (10) predicate -> . expression NE expression
    (11) predicate -> . expression LT expression
    (12) predicate -> . expression LE expression
    (13) predicate -> . expression GT expression
    (14) predicate -> . expression GE expression
    (15) predicate -> . expression NOT BETWEEN expression AND expression
    (16) predicate -> . expression BETWEEN expression AND expression
    (17) predicate -> . expression NOT LIKE QUOTED
    (18) predicate -> . expression LIKE QUOTED
    (19) predicate -> . expression NOT ILIKE QUOTED
    (20) predicate -> . expression ILIKE QUOTED
    (21) predicate -> . expression NOT IN LPAREN expression_list RPAREN
    (22) predicate -> . expression IN LPAREN expression_list RPAREN
    (23) predicate -> . expression IS NOT NULL
    (24) predicate -> . expression IS NULL
    (25) predicate -> . temporal_predicate
    (26) predicate -> . spatial_predicate
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . LBRACKET expression RBRACKET
    (56) expression -> . GEOMETRY
    (57) expression -> . ENVELOPE
    (58) expression -> . attribute
    (59) expression -> . QUOTED
    (60) expression -> . INTEGER
    (61) expression -> . FLOAT
    (27) temporal_predicate -> . expression BEFORE TIME
    (28) temporal_predicate -> . expression BEFORE OR DURING time_period
    (29) temporal_predicate -> . expression DURING time_period
    (30) temporal_predicate -> . expression DURING OR AFTER time_period
    (31) temporal_predicate -> . expression AFTER TIME
    (35) spatial_predicate -> . INTERSECTS LPAREN expression COMMA expression RPAREN
    (36) spatial_predicate -> . DISJOINT LPAREN expression COMMA expression RPAREN
    (37) spatial_predicate -> . CONTAINS LPAREN expression COMMA expression RPAREN
    (38) spatial_predicate -> . WITHIN LPAREN expression COMMA expression RPAREN
    (39) spatial_predicate -> . TOUCHES LPAREN expression COMMA expression RPAREN
    (40) spatial_predicate -> . CROSSES LPAREN expression COMMA expression RPAREN
    (41) spatial_predicate -> . OVERLAPS LPAREN expression COMMA expression RPAREN
    (42) spatial_predicate -> . EQUALS LPAREN expression COMMA expression RPAREN
    (43) spatial_predicate -> . RELATE LPAREN expression COMMA expression COMMA QUOTED RPAREN
    (44) spatial_predicate -> . DWITHIN LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (45) spatial_predicate -> . BEYOND LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (46) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number RPAREN
    (47) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN
    (64) attribute -> . ATTRIBUTE

    NOT             shift and go to state 5
    LPAREN          shift and go to state 6
    LBRACKET        shift and go to state 7
    $end            reduce using rule 65 (empty -> .)
    GEOMETRY        shift and go to state 12
    ENVELOPE        shift and go to state 13
    QUOTED          shift and go to state 9
    INTEGER         shift and go to state 15
    FLOAT           shift and go to state 16
    INTERSECTS      shift and go to state 17
    DISJOINT        shift and go to state 18
    CONTAINS        shift and go to state 19
    WITHIN          shift and go to state 20
    TOUCHES         shift and go to state 21
    CROSSES         shift and go to state 22
    OVERLAPS        shift and go to state 23
    EQUALS          shift and go to state 24
    RELATE          shift and go to state 25
    DWITHIN         shift and go to state 26
    BEYOND          shift and go to state 27
    BBOX            shift and go to state 28
    ATTRIBUTE       shift and go to state 29

    condition_or_empty             shift and go to state 1
    condition                      shift and go to state 2
    empty                          shift and go to state 3
    predicate                      shift and go to state 4
    expression                     shift and go to state 8
    temporal_predicate             shift and go to state 10
    spatial_predicate              shift and go to state 11
    attribute                      shift and go to state 14

state 1

    (0) S' -> condition_or_empty .



state 2

    (1) condition_or_empty -> condition .
    (4) condition -> condition . AND condition
    (5) condition -> condition . OR condition

    $end            reduce using rule 1 (condition_or_empty -> condition .)
    AND             shift and go to state 30
    OR              shift and go to state 31


state 3

    (2) condition_or_empty -> empty .

    $end            reduce using rule 2 (condition_or_empty -> empty .)


state 4

    (3) condition -> predicate .

    AND             reduce using rule 3 (condition -> predicate .)
    OR              reduce using rule 3 (condition -> predicate .)
    $end            reduce using rule 3 (condition -> predicate .)
    RPAREN          reduce using rule 3 (condition -> predicate .)
    RBRACKET        reduce using rule 3 (condition -> predicate .)


state 5

    (6) condition -> NOT . condition
    (3) condition -> . predicate
    (4) condition -> . condition AND condition
    (5) condition -> . condition OR condition
    (6) condition -> . NOT condition
    (7) condition -> . LPAREN condition RPAREN
    (8) condition -> . LBRACKET condition RBRACKET
    (9) predicate -> . expression EQ expression
    (10) predicate -> . expression NE expression
    (11) predicate -> . expression LT expression
    (12) predicate -> . expression LE expression
    (13) predicate -> . expression GT expression
    (14) predicate -> . expression GE expression
    (15) predicate -> . expression NOT BETWEEN expression AND expression
    (16) predicate -> . expression BETWEEN expression AND expression
    (17) predicate -> . expression NOT LIKE QUOTED
    (18) predicate -> . expression LIKE QUOTED
    (19) predicate -> . expression NOT ILIKE QUOTED
    (20) predicate -> . expression ILIKE QUOTED
    (21) predicate -> . expression NOT IN LPAREN expression_list RPAREN
    (22) predicate -> . expression IN LPAREN expression_list RPAREN
    (23) predicate -> . expression IS NOT NULL
    (24) predicate -> . expression IS NULL
    (25) predicate -> . temporal_predicate
    (26) predicate -> . spatial_predicate
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . LBRACKET expression RBRACKET
    (56) expression -> . GEOMETRY
    (57) expression -> . ENVELOPE
    (58) expression -> . attribute
    (59) expression -> . QUOTED
    (60) expression -> . INTEGER
    (61) expression -> . FLOAT
    (27) temporal_predicate -> . expression BEFORE TIME
    (28) temporal_predicate -> . expression BEFORE OR DURING time_period
    (29) temporal_predicate -> . expression DURING time_period
    (30) temporal_predicate -> . expression DURING OR AFTER time_period
    (31) temporal_predicate -> . expression AFTER TIME
    (35) spatial_predicate -> . INTERSECTS LPAREN expression COMMA expression RPAREN
    (36) spatial_predicate -> . DISJOINT LPAREN expression COMMA expression RPAREN
    (37) spatial_predicate -> . CONTAINS LPAREN expression COMMA expression RPAREN
    (38) spatial_predicate -> . WITHIN LPAREN expression COMMA expression RPAREN
    (39) spatial_predicate -> . TOUCHES LPAREN expression COMMA expression RPAREN
    (40) spatial_predicate -> . CROSSES LPAREN expression COMMA expression RPAREN
    (41) spatial_predicate -> . OVERLAPS LPAREN expression COMMA expression RPAREN
    (42) spatial_predicate -> . EQUALS LPAREN expression COMMA expression RPAREN
    (43) spatial_predicate -> . RELATE LPAREN expression COMMA expression COMMA QUOTED RPAREN
    (44) spatial_predicate -> . DWITHIN LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (45) spatial_predicate -> . BEYOND LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (46) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number RPAREN
    (47) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN
    (64) attribute -> . ATTRIBUTE

    NOT             shift and go to state 5
    LPAREN          shift and go to state 6
    LBRACKET        shift and go to state 7
    GEOMETRY        shift and go to state 12
    ENVELOPE        shift and go to state 13
    QUOTED          shift and go to state 9
    INTEGER         shift and go to state 15
    FLOAT           shift and go to state 16
    INTERSECTS      shift and go to state 17
    DISJOINT        shift and go to state 18
    CONTAINS        shift and go to state 19
    WITHIN          shift and go to state 20
    TOUCHES         shift and go to state 21
    CROSSES         shift and go to state 22
    OVERLAPS        shift and go to state 23
    EQUALS          shift and go to state 24
    RELATE          shift and go to state 25
    DWITHIN         shift and go to state 26
    BEYOND          shift and go to state 27
    BBOX            shift and go to state 28
    ATTRIBUTE       shift and go to state 29

    condition                      shift and go to state 32
    predicate                      shift and go to state 4
    expression                     shift and go to state 8
    temporal_predicate             shift and go to state 10
    spatial_predicate              shift and go to state 11
    attribute                      shift and go to state 14

state 6

    (7) condition -> LPAREN . condition RPAREN
    (54) expression -> LPAREN . expression RPAREN
    (3) condition -> . predicate
    (4) condition -> . condition AND condition
    (5) condition -> . condition OR condition
    (6) condition -> . NOT condition
    (7) condition -> . LPAREN condition RPAREN
    (8) condition -> . LBRACKET condition RBRACKET
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . LBRACKET expression RBRACKET
    (56) expression -> . GEOMETRY
    (57) expression -> . ENVELOPE
    (58) expression -> . attribute
    (59) expression -> . QUOTED
    (60) expression -> . INTEGER
    (61) expression -> . FLOAT
    (9) predicate -> . expression EQ expression
    (10) predicate -> . expression NE expression
    (11) predicate -> . expression LT expression
    (12) predicate -> . expression LE expression
    (13) predicate -> . expression GT expression
    (14) predicate -> . expression GE expression
    (15) predicate -> . expression NOT BETWEEN expression AND expression
    (16) predicate -> . expression BETWEEN expression AND expression
    (17) predicate -> . expression NOT LIKE QUOTED
    (18) predicate -> . expression LIKE QUOTED
    (19) predicate -> . expression NOT ILIKE QUOTED
    (20) predicate -> . expression ILIKE QUOTED
    (21) predicate -> . expression NOT IN LPAREN expression_list RPAREN
    (22) predicate -> . expression IN LPAREN expression_list RPAREN
    (23) predicate -> . expression IS NOT NULL
    (24) predicate -> . expression IS NULL
    (25) predicate -> . temporal_predicate
    (26) predicate -> . spatial_predicate
    (64) attribute -> . ATTRIBUTE
    (27) temporal_predicate -> . expression BEFORE TIME
    (28) temporal_predicate -> . expression BEFORE OR DURING time_period
    (29) temporal_predicate -> . expression DURING time_period
    (30) temporal_predicate -> . expression DURING OR AFTER time_period
    (31) temporal_predicate -> . expression AFTER TIME
    (35) spatial_predicate -> . INTERSECTS LPAREN expression COMMA expression RPAREN
    (36) spatial_predicate -> . DISJOINT LPAREN expression COMMA expression RPAREN
    (37) spatial_predicate -> . CONTAINS LPAREN expression COMMA expression RPAREN
    (38) spatial_predicate -> . WITHIN LPAREN expression COMMA expression RPAREN
    (39) spatial_predicate -> . TOUCHES LPAREN expression COMMA expression RPAREN
    (40) spatial_predicate -> . CROSSES LPAREN expression COMMA expression RPAREN
    (41) spatial_predicate -> . OVERLAPS LPAREN expression COMMA expression RPAREN
    (42) spatial_predicate -> . EQUALS LPAREN expression COMMA expression RPAREN
    (43) spatial_predicate -> . RELATE LPAREN expression COMMA expression COMMA QUOTED RPAREN
    (44) spatial_predicate -> . DWITHIN LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (45) spatial_predicate -> . BEYOND LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (46) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number RPAREN
    (47) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN

    NOT             shift and go to state 5
    LPAREN          shift and go to state 6
    LBRACKET        shift and go to state 7
    GEOMETRY        shift and go to state 12
    ENVELOPE        shift and go to state 13
    QUOTED          shift and go to state 9
    INTEGER         shift and go to state 15
    FLOAT           shift and go to state 16
    ATTRIBUTE       shift and go to state 29
    INTERSECTS      shift and go to state 17
    DISJOINT        shift and go to state 18
    CONTAINS        shift and go to state 19
    WITHIN          shift and go to state 20
    TOUCHES         shift and go to state 21
    CROSSES         shift and go to state 22
    OVERLAPS        shift and go to state 23
    EQUALS          shift and go to state 24
    RELATE          shift and go to state 25
    DWITHIN         shift and go to state 26
    BEYOND          shift and go to state 27
    BBOX            shift and go to state 28

    condition                      shift and go to state 33
    expression                     shift and go to state 34
    predicate                      shift and go to state 4
    attribute                      shift and go to state 14
    temporal_predicate             shift and go to state 10
    spatial_predicate              shift and go to state 11

state 7

    (8) condition -> LBRACKET . condition RBRACKET
    (55) expression -> LBRACKET . expression RBRACKET
    (3) condition -> . predicate
    (4) condition -> . condition AND condition
    (5) condition -> . condition OR condition
    (6) condition -> . NOT condition
    (7) condition -> . LPAREN condition RPAREN
    (8) condition -> . LBRACKET condition RBRACKET
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . LBRACKET expression RBRACKET
    (56) expression -> . GEOMETRY
    (57) expression -> . ENVELOPE
    (58) expression -> . attribute
    (59) expression -> . QUOTED
    (60) expression -> . INTEGER
    (61) expression -> . FLOAT
    (9) predicate -> . expression EQ expression
    (10) predicate -> . expression NE expression
    (11) predicate -> . expression LT expression
    (12) predicate -> . expression LE expression
    (13) predicate -> . expression GT expression
    (14) predicate -> . expression GE expression
    (15) predicate -> . expression NOT BETWEEN expression AND expression
    (16) predicate -> . expression BETWEEN expression AND expression
    (17) predicate -> . expression NOT LIKE QUOTED
    (18) predicate -> . expression LIKE QUOTED
    (19) predicate -> . expression NOT ILIKE QUOTED
    (20) predicate -> . expression ILIKE QUOTED
    (21) predicate -> . expression NOT IN LPAREN expression_list RPAREN
    (22) predicate -> . expression IN LPAREN expression_list RPAREN
    (23) predicate -> . expression IS NOT NULL
    (24) predicate -> . expression IS NULL
    (25) predicate -> . temporal_predicate
    (26) predicate -> . spatial_predicate
    (64) attribute -> . ATTRIBUTE
    (27) temporal_predicate -> . expression BEFORE TIME
    (28) temporal_predicate -> . expression BEFORE OR DURING time_period
    (29) temporal_predicate -> . expression DURING time_period
    (30) temporal_predicate -> . expression DURING OR AFTER time_period
    (31) temporal_predicate -> . expression AFTER TIME
    (35) spatial_predicate -> . INTERSECTS LPAREN expression COMMA expression RPAREN
    (36) spatial_predicate -> . DISJOINT LPAREN expression COMMA expression RPAREN
    (37) spatial_predicate -> . CONTAINS LPAREN expression COMMA expression RPAREN
    (38) spatial_predicate -> . WITHIN LPAREN expression COMMA expression RPAREN
    (39) spatial_predicate -> . TOUCHES LPAREN expression COMMA expression RPAREN
    (40) spatial_predicate -> . CROSSES LPAREN expression COMMA expression RPAREN
    (41) spatial_predicate -> . OVERLAPS LPAREN expression COMMA expression RPAREN
    (42) spatial_predicate -> . EQUALS LPAREN expression COMMA expression RPAREN
    (43) spatial_predicate -> . RELATE LPAREN expression COMMA expression COMMA QUOTED RPAREN
    (44) spatial_predicate -> . DWITHIN LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (45) spatial_predicate -> . BEYOND LPAREN expression COMMA expression COMMA number COMMA UNITS RPAREN
    (46) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number RPAREN
    (47) spatial_predicate -> . BBOX LPAREN expression COMMA number COMMA number COMMA number COMMA number COMMA QUOTED RPAREN

    NOT             shift and go to state 5
    LPAREN          shift and go to state 6
    LBRACKET        shift and go to state 7
    GEOMETRY        shift and go to state 12
    ENVELOPE        shift and go to state 13
    QUOTED          shift and go to state 9
    INTEGER         shift and go to state 15
    FLOAT           shift and go to state 16
    ATTRIBUTE       shift and go to state 29
    INTERSECTS      shift and go to state 17
    DISJOINT        shift and go to state 18
    CONTAINS        shift and go to state 19
    WITHIN          shift and go to state 20
    TOUCHES         shift and go to state 21
    CROSSES         shift and go to state 22
    OVERLAPS        shift and go to state 23
    EQUALS          shift and go to state 24
    RELATE          shift and go to state 25
    DWITHIN         shift and go to state 26
    BEYOND          shift and go to state 27
    BBOX            shift and go to state 28
